2010-09-14  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-make-autoload-file): In header
	comment, use PN not P.

2010-08-23  Christian Faulhammer  <fauli@gentoo.org>

	* elisp.eclass: Update documentation

2010-08-22  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-comp): Remove dead function; it has
	been deprecated two years ago in bug 235442.

	* elisp.eclass: Update documentation.

2010-07-21  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): The nullglob shell
	option is not needed here, because inside the loop we test for
	existence of all files anyway. See also bug 328863.
	The temporary file needs only be removed in the no changes case.

2010-01-30  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_prepare): Look for patch in WORKDIR too.

2009-11-25  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass: Prepare for Prefix support.
	(EMACS): Prefix with EPREFIX.
	(elisp-site-file-install): Add EPREFIX in sed expression.
	(elisp-site-regen): Prefix SITELISP with EPREFIX.

2009-11-17  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Display a warning
	message if no site-init files were found. Remove the warning about
	obsolete files; the install location was changed two years ago.

2009-09-27  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-make-autoload-file): Don't substitute
	the "new page" character with sed, since the string could occur in
	the package name. Use a shell variable instead.
	(elisp-site-regen): Start new page before local variables block.

2009-09-15  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_compile): Fix typo, bug 285045.
	Thanks to Andrew N Golovkov <andrew.golovkov@gmail.com>.

2009-09-14  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_compile): Generate Info files from
	Texinfo sources listed in ELISP_TEXINFO.
	(elisp_src_install): Install them.
